slip/slip_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slip-service
  labels:
    app: slip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slip-service
  template:
    metadata:
      labels:
        app: slip-service
    spec:
      containers:
      - name: slip-service
        image: slip-service
        ports:
        - containerPort: 7001
