slip/slip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slip-api

spec:
  selector:
    app: slip-service

  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
