slip/slip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: slip

spec:
  ingressClassName: kong
  rules:
  - host: slip.bloco.live
    http:
      paths:
      - backend:
          service:
            name: slip-api
            port:
              number: 7001
        path: /
        pathType: Prefix
